index.html: Added title attr for npm/bower command divs

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="download-col col-sm-6 col-xs-12">
                 <div class="download-item">
                     <img src="images/npm-icon.svg">
-                    <div class="command clickable center-horizontally">npm install curtainjs</div>
+                    <div title="copy to clipboard" class="command clickable center-horizontally">npm install curtainjs</div>
                 </div>
             </div>
             <div class="download-col  col-sm-6 col-xs-12">
                 <div class="download-item">
                     <img src="images/bower-icon.png">
-                    <div class="command clickable center-horizontally">bower install curtainjs</div>
+                    <div title="copy to clipboard" class="command clickable center-horizontally">bower install curtainjs</div>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
 
     <script type="text" id="cdn-panel">
         <div class="cdn">
-            <img title="copy tags on clipboard" class="script-icon clickable" src="images/script-icon.ico">
+            <img title="copy tags to clipboard" class="script-icon clickable" src="images/script-icon.ico">
             <p class="msg">give it a try!</p>
         </div>
     </script>
