index.html: Added page title and meta-description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset=UTF-8>
     <meta name=viewport content=width=device-width>
+    <title>CurtainJs</title>
+    <meta name="description" content="A jQuery plugin for adding and controlling curtain-like animated panels in your pages.">
     <link rel=stylesheet type=text/css href=css/flexboxgrid.min.css>
     <link rel=stylesheet type=text/css href=css/styles.css>
     <link rel=stylesheet type=text/css href=https://rawgit.com/jahnestacado/curtainjs/master/css/jquery.curtain.min.css>
