images/favicon.ico: Added favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel=stylesheet type=text/css href=css/styles.css>
     <link rel=stylesheet type=text/css href=https://rawgit.com/jahnestacado/curtainjs/master/css/jquery.curtain.min.css>
     <link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
     <script src=js/jquery.js></script>
     <script href="https://raw.githubusercontent.com/cowboy/jquery-throttle-debounce/v1.1/jquery.ba-throttle-debounce.min.js"></script>
     <script src=https://rawgit.com/jahnestacado/curtainjs/master/js/jquery.curtain.min.js></script>
